# personal-finance-dash

./: .gitignore  LICENSE  README.md  app.py  data.py  pyproject.toml  theme.py
panels/: budget.py  cashflow.py  networth.py
