[project]
name = "personal-finance-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.3.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
